gobmkida/g2/propose_edge_moves
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/propose_edge_moves/src/engine/reading.c:2747:7: error: use of undeclared identifier 'dword_76BCFC'
v13 = dword_76BCFC[v9]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/propose_edge_moves/src/engine/reading.c:2757:7: error: use of undeclared identifier 'dword_76BCFC'
v20 = dword_76BCFC[v9]; 
      ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/propose_edge_moves/src/obj/1/reading.o] Error 1
